# baby

./: DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  GitHub自动构建配置完成.docx  GitHub自动构建配置完成.md  PROJECT_OVERVIEW.md  QUICK_RELEASE.md  QUICK_START.md  README.docx  README.md  index.html  package.json  tailwind.config.js  upload-simple.bat  upload-to-github.bat  upload-to-github.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  db.rs  main.rs
src/components/: FileGrid.tsx  FilePreview.tsx  SettingsModal.tsx  Sidebar.tsx
